# bastion

./: .gitignore  .pre-commit-config-setup.md  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_passkey_health.py
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  squash-to-main.yml  test.yml  validate-links.yml
docs/: BASTION-TAGGING-GUIDE.md  CNAME  CRYPTO-FUNCTION-MATRIX.md  DEFENSE-IN-DEPTH-GAPS.md  ENTROPY-SYSTEM.md  ESTATE-VERSION-CONTROL.md  FLT-JOHNNY-DECIMAL.md  GETTING-STARTED.md  Gemfile  LABEL-FORMAT-SPECIFICATION.md  README.md  RECOVERY-BAG-PHYSICAL-DESIGN.md  RISK-ANALYSIS.md  SIGCHAIN-GUIDE.md  TOKEN-SECTION-STRUCTURE.md  USERNAME-GENERATOR-GUIDE.md  _config.yml  index.md  recovery-bag.mmd
docs/_includes/: head-custom.html
docs/airgap/: AIRGAP-1PASSWORD-TEMPLATES.md  AIRGAP-CARD-PROVISIONING.md  AIRGAP-DESIGN-DECISIONS.md  ENCRYPTED-BACKUP.md  GPG-KEY-SETUP.md  RECOVERY-BAG-PHYSICAL-DESIGN.md  RECOVERY-GUIDE-TEMPLATE.md  copilot-instructions.md  recovery-bag.mmd
docs/assets/: README.md
docs/features/: YUBIKEY-TOTP-PROVISIONING-QUICKREF.md  YUBIKEY-TOTP-PROVISIONING.md
docs/getting-started/: DEBUG-GETTING-STARTED.md  GETTING-STARTED.md  PLATFORM-COMPATIBILITY.md  YUBIKEY-TOTP-PROVISIONING-IMPLEMENTATION.md
docs/integration/: 1PASSWORD-DATA-MODEL-DECISIONS.md  1PASSWORD-LINKING-IMPLEMENTATION.md  BASTION-METADATA-GUIDE.md  TOKEN-SECTION-STRUCTURE.md
scripts/: generate-brand-assets.sh  publish.sh  sloc.sh  validate-doc-links.py
(+25 files in other folders)
